SNRGY-3912 add /last-message endpoint
