# docs/swagger.yaml
@@ -1,5 +1,13 @@
 basePath: /
 definitions:
+  cache.Entry:
+    properties:
+      time:
+        type: string
+      value:
+        additionalProperties: true
+        type: object
+    type: object
   model.DataAvailabilityResponseElement:
     properties:
       from:
@@ -276,6 +284,39 @@ paths:
         "500":
           description: Internal Server Error
       summary: download
+  /last-message:
+    get:
+      parameters:
+      - description: device_id
+        in: query
+        name: device_id
+        required: true
+        type: string
+      - description: service_id
+        in: query
+        name: service_id
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: The last message
+          schema:
+            $ref: '#/definitions/cache.Entry'
+        "400":
+          description: Bad Request
+        "401":
+          description: Unauthorized
+        "403":
+          description: Forbidden
+        "404":
+          description: Not Found
+        "500":
+          description: Internal Server Error
+      security:
+      - Bearer: []
+      summary: Last Message
   /last-values:
     post:
       consumes:
@@ -396,7 +437,8 @@ paths:
         "200":
           description: 2D or 3D array
           schema:
-            items: {}
+            items:
+              type: object
             type: array
         "400":
           description: Bad Request
@@ -526,7 +568,8 @@ paths:
       responses:
         "200":
           description: the raw value
-          schema: {}
+          schema:
+            type: object
         "400":
           description: Bad Request
         "401":
